--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Landing Page</title>
 </head>
 <body>
-    
+    <div class="header">
+        <div class="logo">Header Logo</div>
+        <div class="links">
+            <ul>
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
