--- a/index.html
+++ b/index.html
@@ -27,5 +27,26 @@
         </div>
         <div class="placeholder">this is a placeholder for an image</div>
     </div>
+    <div class="info">
+        <div class="info-title">Some random information.</div>
+        <div class="info-list">
+            <div class="info-item">
+                <div class="info-image"></div>
+                this is some subtext under an illustration or image
+            </div>
+            <div class="info-item">
+                <div class="info-image"></div>
+                this is some subtext under an illustration or image
+            </div>
+            <div class="info-item">
+                <div class="info-image"></div>
+                this is some subtext under an illustration or image
+            </div>
+            <div class="info-item">
+                <div class="info-image"></div>
+                this is some subtext under an illustration or image
+            </div>
+        </div>
+    </div>
 </body>
 </html>
