--- a/index.html
+++ b/index.html
@@ -53,6 +53,15 @@
             </div>
             <div class="quote-author">-Thor, God of Thunder</div>
         </div>
+        <div class="cta">
+            <div class="cta-text">
+                <div class="cta-main">Call to action! It's time!</div>
+                <div class="cta-sub">
+                    Sign up for our product by clicking that button right over there!
+                </div>
+            </div>
+            <button class="sign-up">Sign up</button>
+        </div>
     </div>
 </body>
 </html>
