Add footer section and its styling

--- a/index.html
+++ b/index.html
@@ -63,5 +63,6 @@
             </div>
             <button class="sign-up">Sign up</button>
         </div>
+        <div class="footer">Copyright © panmeek 2025</div>
     </body>
 </html>
